# conquest

./: .env.dev.example  .env.prod.example  .gitignore  DESIGN_SYSTEM.md  MIGRATION_PLAN.md  Makefile  SPACE_CONQUEST_ADDENDUM_v1.2.md  SPACE_CONQUEST_INFRA_v1.3.md  SPACE_CONQUEST_MASTER(1).md  docker-compose.coolify.yml  docker-compose.dev.yml  docker-compose.prod.yml  migration.txt
backend/: Cargo.toml  Dockerfile.dev  Dockerfile.prod
backend/.sqlx/: query-0b5584cb846d2850bdc932a13589474c7203cce99a6a049af456369f74db6fe9.json  query-17f7e6cb79f9a219ae480b9cbd10b27d406e5c8c7614d5bf1bcf01d4ce3d12e9.json  query-1922b33c07ef700ac9ce6b7f1fd42c0c92b2dc3b09939fdd82e0acabb5742a96.json  query-2d45e2bf9dbae4a4b73c782ea3bad63253b0e4c60a3ba3ef52aad48c454fb932.json  query-2e4ff769de63ee7a679b44fb7582d3941f651fd0fb29383e7827375d6c90cd45.json  query-3190f29b37e4179f7f8f3b110933c0a2727d04a41025b43f7fcde6633cd360d3.json  query-35a4de569a64ab8f27f7d717d22fa94afc23c857752930d169f674073f819d82.json  query-372e50ee829ccc911be70efbc12761e68258f57e2be74802c85caf6c4409fa3d.json  query-396d73d7a148b791e15372f09794c08238c3bcba10380f973bfed128b098ff17.json  query-448427fb086f4998f50bcfe7164c4a1d8555cc47f181e89715160c5c52e2ee4a.json  query-55b3e7cfb34d1a32b2720df181da80df05fff5ba0e4c8652baafc4bef9c0b67e.json  query-5963f2840831a5847e626137dabc190809da57739962f46e9273368a955b7d87.json  query-5a970a731f6b76abd24233d137218c6ea1d6858d89a0e54c769606892c8e794b.json  query-65d71d4e5b719850c733762b9d7e87f190f740904199ffc58cdabdd237eb78ff.json  (+25 more)
backend/migrations/: 002_create_universes.sql  (+10 more)
(+146 files in other folders)
