[package]
name = "space-conquest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "space-conquest"
path = "src/main.rs"

[dependencies]
axum          = { version = "0.7", features = ["ws", "multipart", "macros"] }
tokio         = { version = "1",   features = ["full"] }
sqlx          = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "json", "chrono", "uuid", "migrate", "bigdecimal"] }
redis         = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
serde         = { version = "1",   features = ["derive"] }
serde_json    = "1"
uuid          = { version = "1",   features = ["v4", "serde"] }
chrono        = { version = "0.4", features = ["serde"] }
bigdecimal    = { version = "0.4", features = ["serde"] }
jsonwebtoken  = "9"
argon2        = "0.5"
dotenvy       = "0.15"
tower         = "0.4"
tower-http    = { version = "0.5", features = ["cors", "trace", "compression-gzip", "request-id"] }
tracing                 = "0.1"
tracing-subscriber      = { version = "0.3", features = ["env-filter", "json"] }
rand          = "0.8"
thiserror     = "1"
anyhow        = "1"
futures       = "0.3"

[dev-dependencies]
tokio-test = "0.4"
